--- a/system/cms/themes/sites/css/workless/buttons.css
+++ b/system/cms/themes/sites/css/workless/buttons.css
@@ -1,164 +1,217 @@
-/**
- * Buttons 
- */
-.button, 
-.button:visited 
-{
-	background: #222 url(../img/button.png) repeat-x; 
-	display: inline-block; 
-	padding: 8px 10px 8px 10px; 
-	margin-left: -10px;
-	margin-right: 15px;
-	margin-bottom: 1.5em;
-	color: #ffffff; 
-	text-decoration: none;
-	border-radius: 2px;
-	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
-	text-shadow: 0 -1px 1px rgba(0, 0, 0, 0.3);
-	border-bottom: 2px solid rgba(0, 0, 0, 0.2);
-	position: relative;
-	cursor: pointer;
-	text-transform: uppercase;
+/*.btns */
+.btns {
+	white-space: nowrap;
+}
+.btn {
+  cursor: pointer;
+  display: inline-block;
+  background-color: #e6e6e6;
+  background-repeat: no-repeat;
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), color-stop(0.25, #ffffff), to(#e6e6e6));
+  background-image: -webkit-linear-gradient(#ffffff, #ffffff 0.25, #e6e6e6);
+  background-image: -moz-linear-gradient(#ffffff, #ffffff 0.25, #e6e6e6);
+  background-image: -ms-linear-gradient(#ffffff, #ffffff 0.25, #e6e6e6);
+  background-image: -o-linear-gradient(#ffffff, #ffffff 0.25, #e6e6e6);
+  background-image: linear-gradient(#ffffff, #ffffff 0.25, #e6e6e6);
+  padding: 5px 10px 5px 10px;
+  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
+  color: #333;
+  font-size: 13px;
+  line-height: 18px;
+  border: 1px solid #ccc;
+  border-bottom-color: #bbb;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-grid-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+  -moz-grid-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+  grid-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+  -webkit-transition: 250ms linear all;
+  -moz-transition: 250ms linear all;
+  transition: 250ms linear all;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
-a.button
-{
-	padding: 10px 10px 11px 10px; 
-	color: #ffffff; 
+.btn, .btn a, a.btn {
+  color: #ffffff;
 }
 
-.button:hover
-{ 
-	background-color: #111111; 
-	color: #ffffff;
+.btn:hover, .btn a:hover, a.btn:hover {
+  color: #ffffff;
 }
-.button:active
-{ 
-	top: 1px; 
+
+.btn.red {
+  background-color: #9d261d;
+  background-repeat: repeat-x;
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#d83a2e), to(#9d261d));
+  background-image: -moz-linear-gradient(#d83a2e, #9d261d);
+  background-image: -ms-linear-gradient(#d83a2e, #9d261d);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #d83a2e), color-stop(100%, #9d261d));
+  background-image: -webkit-linear-gradient(#d83a2e, #9d261d);
+  background-image: -o-linear-gradient(#d83a2e, #9d261d);
+  background-image: linear-gradient(#d83a2e, #9d261d);
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+  border: 1px solid #5c1611;
+  color: #fff!important;
 }
-.small.button, 
-.small.button:visited 			
-{ 
-	font-size: 11px;
+
+.btn.red:hover {
+  background-color: #d83a2e;
+  background-repeat: repeat-x;
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#9d261d), to(#d83a2e));
+  background-image: -moz-linear-gradient(#9d261d, #d83a2e);
+  background-image: -ms-linear-gradient(#9d261d, #d83a2e);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #9d261d), color-stop(100%, #d83a2e));
+  background-image: -webkit-linear-gradient(#9d261d, #d83a2e);
+  background-image: -o-linear-gradient(#9d261d, #d83a2e);
+  background-image: linear-gradient(#9d261d, #d83a2e);
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+  border: 1px solid #5c1611;
 }
-.button, 
-.button:visited,
-.medium.button, 
-.medium.button:visited 		
-{ 
-	font-size: 13px; 
-	font-weight: bold; 
-	line-height: 1; 
-	text-shadow: 0 -1px 1px rgba(0, 0, 0, 0.3); 
+
+.btn.orange {
+  background-color: #d89342;
+  background-repeat: repeat-x;
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#f3ad55), to(#d89342));
+  background-image: -moz-linear-gradient(#f3ad55, #d89342);
+  background-image: -ms-linear-gradient(#f3ad55, #d89342);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #f3ad55), color-stop(100%, #d89342));
+  background-image: -webkit-linear-gradient(#f3ad55, #d89342);
+  background-image: -o-linear-gradient(#f3ad55, #d89342);
+  background-image: linear-gradient(#f3ad55, #d89342);
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+  border: 1px solid #b6782c;
+  color: #fff!important;
 }
-.large.button, 
-.large.button:visited 			
-{ 
-	font-size: 14px; 
-	padding: 8px 15px 8px 15px; 
+
+.btn.orange:hover {
+  background-color: #f3ad55;
+  background-repeat: repeat-x;
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#d89342), to(#f3ad55));
+  background-image: -moz-linear-gradient(#d89342, #f3ad55);
+  background-image: -ms-linear-gradient(#d89342, #f3ad55);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #d89342), color-stop(100%, #f3ad55));
+  background-image: -webkit-linear-gradient(#d89342, #f3ad55);
+  background-image: -o-linear-gradient(#d89342, #f3ad55);
+  background-image: linear-gradient(#d89342, #f3ad55);
 }
-.rounded.button 
-{
-	border-radius: 25px;
+
+.btn.green {
+  background-color: #96b633;
+  background-repeat: repeat-x;
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#bada55), to(#96b633));
+  background-image: -moz-linear-gradient(#bada55, #96b633);
+  background-image: -ms-linear-gradient(#bada55, #96b633);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #bada55), color-stop(100%, #96b633));
+  background-image: -webkit-linear-gradient(#bada55, #96b633);
+  background-image: -o-linear-gradient(#bada55, #96b633);
+  background-image: linear-gradient(#bada55, #96b633);
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+  border: 1px solid #7b9b18;
+  color: #fff!important;
 }
-.flat.button 
-{
-	background: none;
-	border-bottom: none;
-	box-shadow: none;
+
+.btn.green:hover {
+  background-color: #bada55;
+  background-repeat: repeat-x;
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#96b633), to(#bada55));
+  background-image: -moz-linear-gradient(#96b633, #bada55);
+  background-image: -ms-linear-gradient(#96b633, #bada55);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #bada55), color-stop(100%, #bada55));
+  background-image: -webkit-linear-gradient(#96b633, #bada55);
+  background-image: -o-linear-gradient(#96b633, #bada55);
+  background-image: linear-gradient(#96b633, #bada55);
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+  border: 1px solid #7b9b18;
 }
-/**
- * Pink
- */
-.pink.button, 
-.pink.button:visited		
-{ 
-	background-color: #fe57a1; 
+
+.btn.blue {
+  background-color: #0064cd;
+  background-repeat: repeat-x;
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#049cdb), to(#0064cd));
+  background-image: -moz-linear-gradient(#049cdb, #0064cd);
+  background-image: -ms-linear-gradient(#049cdb, #0064cd);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #049cdb), color-stop(100%, #0064cd));
+  background-image: -webkit-linear-gradient(#049cdb, #0064cd);
+  background-image: -o-linear-gradient(#049cdb, #0064cd);
+  background-image: linear-gradient(#049cdb, #0064cd);
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+  border: 1px solid #003f81;
+  color: #fff!important;
 }
-.pink.button:hover	
-{ 
-	background-color: #d74b8a; 
+
+.btn.blue:hover {
+  background-color: #049cdb;
+  background-repeat: repeat-x;
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#0064cd), to(#049cdb));
+  background-image: -moz-linear-gradient(#0064cd, #049cdb);
+  background-image: -ms-linear-gradient(#0064cd, #049cdb);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #0064cd), color-stop(100%, #049cdb));
+  background-image: -webkit-linear-gradient(#0064cd, #049cdb);
+  background-image: -o-linear-gradient(#0064cd, #049cdb);
+  background-image: linear-gradient(#0064cd, #049cdb);
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+  border: 1px solid #003f81;
 }
-/**
- * Green
- */
-.green.button, 
-.green.button:visited		
-{ 
-	background-color: #91bd09; 
+
+.btn.gray {
+  background-color: #bbbbbb;
+  background-repeat: repeat-x;
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#cccccc), to(#bbbbbb));
+  background-image: -moz-linear-gradient(#cccccc, #bbbbbb);
+  background-image: -ms-linear-gradient(#cccccc, #bbbbbb);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #cccccc), color-stop(100%, #bbbbbb));
+  background-image: -webkit-linear-gradient(#cccccc, #bbbbbb);
+  background-image: -o-linear-gradient(#cccccc, #bbbbbb);
+  background-image: linear-gradient(#cccccc, #bbbbbb);
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+  border: 1px solid #aaaaaa;
 }
-.green.button:hover	
-{ 
-	background-color: #749a02; 
+
+.btn.large {
+  font-size: 16px;
+  line-height: 28px;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  border-radius: 6px;
 }
-/** 
- * Blue
- */
-.blue.button, 
-.blue.button:visited		
-{ 
-	background-color: #0090C8; 
+
+.btn.small {
+  padding-right: 9px;
+  padding-left: 9px;
+  font-size: 11px;
 }
-.blue.button:hover							
-{
-	background-color: #0077A7; 
+
+.btn.disabled {
+  background-image: none;
+  filter: alpha(opacity=65);
+  -khtml-opacity: 0.65;
+  -moz-opacity: 0.65;
+  opacity: 0.65;
+  cursor: default;
 }
-/**
- * Red
- */
-.red.button, 
-.red.button:visited			
-{ 
-	background-color: #ff2b25; 
+
+.btn:disabled {
+  background-image: none;
+  filter: alpha(opacity=65);
+  -khtml-opacity: 0.65;
+  -moz-opacity: 0.65;
+  opacity: 0.65;
+  cursor: default;
 }
-.red.button:hover							
-{ 
-	background-color: #ba1f1b; 
+
+.btn:active {
+  -webkit-grid-shadow: inset 0 3px 7px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.05);
+  -moz-grid-shadow: inset 0 3px 7px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.05);
+  grid-shadow: inset 0 3px 7px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.05);
 }
-/** 
- * Magenta
- */
-.magenta.button, 
-.magenta.button:visited		
-{ 
-	background-color: #a9014b; 
+
+button.btn::-moz-focus-inner, input[type=submit].btn::-moz-focus-inner {
+  padding: 0;
+  border: 0;
 }
-.magenta.button:hover							
-{ 
-	background-color: #630030; 
-}
-/**
- * Orange
- */
-.orange.button, 
-.orange.button:visited		
-{ 
-	background-color: #ff5c00; 
-}
-.orange.button:hover
-{ 
-	background-color: #d45500; 
-}
-/** 
- * Yellow
- */
-.yellow.button,
-.yellow.button:visited		
-{ 
-	background-color: #ffb515; 
-}
-.yellow.button:hover { 
-	background-color: #fc9200; 
-}
-/**
- * Text Button
- */
-.text_button
-{
-	color: #555555;
-	font-weight: bold;
-	margin-right: 15px;
-	font-size: 11px;
-	text-transform: uppercase;
-}
-/* @end Buttons */
+
+/* @end.btns */
