Updated buttons styles and polished the last of the MSM for now

--- a/system/cms/themes/sites/css/workless/application.css
+++ b/system/cms/themes/sites/css/workless/application.css
@@ -39,6 +39,11 @@ div.settings li
 	list-style: none;
 }
 
+ol.site, ol.user, .add-user ol
+{
+	list-style: none;
+}
+
 #login 
 {
 	background: #ffffff;
